--- a/documentation/modules/ROOT/pages/02-architecture.adoc
+++ b/documentation/modules/ROOT/pages/02-architecture.adoc
@@ -8,97 +8,48 @@
 Introduction for the architecture of this solution pattern.
 
 == Common Challenges 
+When moving applications or service across environments, there are a number of common challenges that enterprise organizations must address. Below are some of the common challenges:
+
+* *Minimizing Downtime*: Keep downtime to a minimum while maintaining service continuity. Ideally enterprises would prefer to have as little downtime as possible while maintaining service continuity.
+
+* *Reducing Complexity*: Reducing the complexity of setting up and managing complex networking systems, such as firewalls and routing, VPNs to connect the older environments to the new ones, during the transition
+
+* *Avoid Application Level Changes*: When the services are migrated to the new platform, the applications must be able to communicate with each other using the same service address.
 
 [#tech_stack]
 == Technology Stack
 
 // Change links and text here as you see fit.
-* Red Hat supported products
-** https://www.redhat.com/en/technologies/cloud-computing/openshift[Red Hat OpenShift]
-** Red Hat Application Foundation
-*** https://access.redhat.com/products/quarkus[Quarkus]
-*** https://www.redhat.com/en/technologies/cloud-computing/openshift/openshift-streams-for-apache-kafka[Kafka Streams]
-* Other open source products:
-** https://www.postgresql.org/[PostgreSQL database]
-** https://helm.sh/[Helm]
+* https://www.redhat.com/en/technologies/cloud-computing/openshift/virtualization[Red Hat OpenShift Virtualization]: Red Hat® OpenShift® Virtualization, provides a modern platform for organizations to run and deploy their new and existing virtual machine (VM) workloads. It allows for easy migration and management of traditional virtual machines onto a trusted, consistent, and comprehensive hybrid cloud application platform. OpenShift Virtualization offers a path for infrastructure modernization and aims to preserve existing virtualization investments while embracing modern management principles.
+
+* https://developers.redhat.com/products/service-interconnect/overview[Red Hat Service Interconnect]: Red Hat Service Interconnect simplifies application connectivity across the hybrid cloud. Unlike traditional means of connectivity (such as VPNs combined with complex firewall rules), development teams can easily create interconnections across different environments without compromising the organization's security or data.
+Applications and services across environments can communicate with each other using Red Hat Service Interconnect as if they were all running in the same site. This connectivity can be maintained even as applications are migrated between environments.
+
+* https://www.redhat.com/en/technologies/cloud-computing/openshiftm[Red Hat OpenShift]: Red Hat® OpenShift® is a trusted, comprehensive, and consistent platform to develop, modernize, and deploy applications at scale, including today’s AI-enabled apps. Innovate faster with a complete set of services for bringing apps to market on your choice of infrastructure.
 
 
 [#in_depth]
 == An in-depth look at the solution's architecture
 
-Technical description including all or some of the following: architecture ir ed diagrams. In-depth details of the decisions made and solutions used. Description of each service and what it is used for. Description of any integration.
+InstaMedi's patient portal application consists of 3 key components.
 
-=== Using images 
+* Frontend - A web front-end service that uses the PostgreSQL database and a payment processor deployed in a private cluster to display the names of doctors and patients and process the payments.
+* PostgreSQL database - Stores a list of patients, doctors and the bills owed by patients
+* Payment Processor - To process the payments made by the patients and indicate the location (environment) where the payment was processed. 
 
-image::red_hat_open-hybrid-cloud.png[width=30%]
+The frontend is deployed on an OpenShift cluster. Both the database and the payment processor are deployed on a VM running of one of the traditional hypervisor platform. InstaMedi, wants to migrate all the components from the traditional hypervisor platform to OpenShift virtualization, without having any downtime. Initially there are no components running on OpenShift Virtualization. 
 
-{empty}
+The frontend is connected to the other components through a Virtual Application Network enabled by Red Hat Service Interconnect. Once a service is exposed over network, Service Interconnect router creates a virtual local service in the OpenShift environment. The frontend connects to these services as if they are local services and the router takes care of routing the call to the correct destination. The frontend is not aware of location of the actual services.   
 
-=== Embedding HTML
+image::openshift_connected_to_vmware.png[width=70%]
 
-++++
-  <br>
-  <h3> Embed HTML by surrounding it with with four +s before and after. </h3>
-  <span>View the ascii doc to learn more</span>
-  <br> 
-++++
+They gradually migrate the components one by one. This is how Instamedi's environment would look like during the middle of the transitioning stage. All the instances on the database and payment service running on both the hypervisor platform and OpenShift Virtualization, are explicitly given the same service address on the network, so that they point to the same virtual service/proxy on the OpenShift cluster. This also ensures that no changes are made to the frontend since the service name that it refers to remains constant irrespective of where the database and payment processor components are deployed. The multicast capabilities of Service Interconnect ensure that the load is balanced between the two instances. This way Instamedi can have both the environment simultaneously running until they complete all the tests and are sure to decommission the old environment.
 
+image::active_active_load.png[width=70%]
 
-=== Different decorators
+Finally, once the migration team is completely sure that everything is running smoothly, they can decommission the old environment. The network between the Openshift cluster and the traditional hypervisor platform is delete, using a single command. Once this is done, Service Interconnect automatically reroutes all the traffic to the service running in theOpenShift Virtualization environment. All this is done without making any changes to the frontend, database or the payment processor. In fact, the frontend team doesn't even realise that a migration has happened, since there was no code change and no downtime.
 
-[TIP]
-====
-This is a Tip
-====
-
-[NOTE]
-====
-This is a NOTE
-====
-
-[WARNING]
-====
-This is a WARNING
-====
-
-[IMPORTANT]
-====
-This is IMPORTANT
-====
-
-
-=== Creating  tables
- 
-[cols="1a,1a,1a"]
-|===
-| *Column A*  | Column *A* | _Column C_
-|
-* Lorem Ipsum
-* Lorem Ipsum
-
-|
-* Lorem Ipsum
-* Lorem Ipsum
-
-|
-* Lorem Ipsum
-* Lorem Ipsum
-|===
+image::failover_reroute.png[width=70%]
 
 
 
-=== Content that can be copied
-
-Click below to copy the content
-[.console-input]
-[source,shell script]
-----
-oc version #openshift cli client
-oc login --token=<token> --server=<server>
-----
-
-
-[#more_tech]
-== About the Technology Stack
-
-If you want to include more details about the tech stack you used, this is the place.
