Add Developer Resources

--- a/documentation/modules/ROOT/pages/developer-resources.adoc
+++ b/documentation/modules/ROOT/pages/developer-resources.adoc
@@ -6,6 +6,7 @@
 
 = Developer Resources
 
-* Add link to the git repo of the code
-* Add links to whitepapers, ebooks, learning paths, product pages
+* https://www.redhat.com/en/engage/15-reasons-adopt-openshift-virtualization-ebook[15-reasons-adopt-openshift-virtualization-ebook]
+* https://docs.redhat.com/en/documentation/red_hat_service_interconnect/1.5[Red Hat Service Interconnect Documentation]
+* https://developers.redhat.com/products/service-interconnect/getting-started [Getting Started with Red hat Service Interconnect]
 
