--- a/documentation/modules/ROOT/pages/04-conclusion.adoc
+++ b/documentation/modules/ROOT/pages/04-conclusion.adoc
@@ -1,4 +1,4 @@
-= Solution Pattern: Name Template
+= Solution Pattern: Minimize downtime when migrating your applications from hypervisor based environments to OpenShift Virtualization
 :sectnums:
 :sectlinks:
 :doctype: book
