--- a/documentation/modules/ROOT/pages/01-pattern.adoc
+++ b/documentation/modules/ROOT/pages/01-pattern.adoc
@@ -7,7 +7,7 @@ To ensure a smooth transition from traditional hypervisors like VMware vSphere t
 == The Solution
 
 
-Instamedi decided to use implement *Red Hat Service Interconnect* as a key component of its migration strategy to simplify connectivity across its diverse environments. By leveraging the advanced Layer 7 addressing and routing capabilities of Service Interconnect, Instamedi ensured seamless communication between its applications during and after the migration process. This solution allowed their applications to communicate effortlessly across both the traditional hypervisor platform and OpenShift Virtualization, even as components were gradually moved or updated. Service Interconnect's anycast/multicast capabilities, enabled multiple instances of a service deployed in different destinations to use the same service address. This streamlined routing of requests to instances of a single service, regardless of whether they were running - original hypervisor or OpenShift Virtualization. If a VM is disconnected or a service is undeployed post-migration, traffic is automatically and seamlessly switched over to newly migrated service instances that are using the same address, ensuring continuous operation without disruption.
+Instamedi decided to use implement *Red Hat Service Interconnect* as a key component of its migration strategy to simplify connectivity across its diverse environments. By leveraging the advanced Layer 7 addressing and routing capabilities of Service Interconnect, Instamedi ensured seamless communication between its applications during and after the migration process. This solution allowed their applications to communicate effortlessly across both the traditional hypervisor platform and OpenShift Virtualization, even as components were gradually moved or updated. Service Interconnect's anycast and multicast capabilities, enabled multiple instances of a service deployed in different destinations to use the same service address. This streamlined routing of requests to instances of a single service, regardless of whether they were running - original hypervisor or OpenShift Virtualization. If a VM is disconnected or a service is undeployed post-migration, traffic is automatically and seamlessly switched over to newly migrated service instances that are using the same address, ensuring continuous operation without disruption.
 
 == Additonal Context and Resources
 * 
