--- a/documentation/modules/ROOT/pages/03-demo.adoc
+++ b/documentation/modules/ROOT/pages/03-demo.adoc
@@ -26,7 +26,7 @@ To set up the demo, you will need the following prerequisites:
 
 * A similar virtual machine running RHEL 9 on OpenShift Virtualization. We will migrate the payment processor here. You can try it for free in the https://developers.redhat.com/products/openshift/virtualization[Red Hat Developer Sandbox]
 
-* Install podman on both the VMs to run the application containers.
+* Install podman(v4 or greater) on both the VMs to run the application containers.
 
 * An OpenShift cluster to deploy the frontend of the application.
 
@@ -37,14 +37,14 @@ Hypervisor VM:
 [.console-input]
 [source, bash,subs="+macros,+attributes"]
 ---- 
-curl -s https://raw.githubusercontent.com/rpscodes/solution-pattern-interconnect-virt/refs/heads/main/setup/vmware_setup.sh
+curl -s https://raw.githubusercontent.com/rpscodes/solution-pattern-interconnect-virt/refs/heads/main/setup/vmware-setup.sh | bash
 ----
 
 OpenShift Virtualization:
 [.console-input]
 [source, bash,subs="+macros,+attributes"]
 ---- 
-curl -s https://raw.githubusercontent.com/rpscodes/solution-pattern-interconnect-virt/refs/heads/main/setup/openshift_virt_setup.sh
+curl -s https://raw.githubusercontent.com/rpscodes/solution-pattern-interconnect-virt/refs/heads/main/setup/openshift-virt-setup.sh | bash
 ----
 
 OpenShift cluster:
@@ -78,7 +78,7 @@ skupper init --enable-console --enable-flow-collector --console-auth unsecured
 [%collapsible]
 ====
 ******
-Service Interconnect router is the key component for establishing connectivity between sites and is installed in all the sites in the network The Communication across the network happens between the routers. Below are the key functions and attributes of the router:
+Service Interconnect router is the key component for establishing connectivity between sites and is installed in all the sites in the network. The Communication across the network happens between the routers. Below are the key functions and attributes of the router:
 
 * Routers establish links with assigned peers
 * Determine  shortest path based on message exchange
@@ -102,7 +102,7 @@ skupper token create secret_vmware.token
 [%collapsible]
 ====
 ******
-* Creating a link between two environments(sites)requires explicit permission from the target site. This permission is granted using tokens. A token contains a URL for the target site and a secret key.
+* Creating a link between two environments(sites) requires explicit permission from the target site. This permission is granted using tokens. A token contains a URL for the target site and a secret key.
 * Tokens can be restricted to a chosen number of uses inside a limited time window. By default, tokens allow only one use and expire after 15 minutes.
 *In this example, site Openshift cluster wishes to allow Hypervisor VM to create a link. Router in the OpenShift cluster creates a token. The VM then uses the token to create the link.
 ******
@@ -220,20 +220,26 @@ skupper init
 ----
 podman run --name portal-database --detach --rm -p 5432:5432 --network skupper quay.io/redhatintegration/patient-portal-database:devnation
 
-podman run --name portal-payments --hostname processed-at-vmware --detach --rm -p 8080:8080 --network skupper quay.io/redhatintegration/patient-portal-payment-processor:devnation
+
+podman run --name portal-payments --hostname processed-at-openshift-virt --detach --rm -p 8080:8080 --network skupper quay.io/redhatintegration/patient-portal-payment-processor:devnation
 ----
 +
 OR
+
 
 ** For ARM
 +
 [.console-input]
 [source, bash,subs="+macros,+attributes"]
 ----
-podman run --name portal-database --detach --rm -p 5432:5432 --network skupper quay.io/redhatintegration/patient-portal-database-arm64:latest 
+podman run --name portal-database --detach --rm -p 5432:5432 --network skupper quay.io/redhatintegration/patient-portal-database-arm64:latest
 
-podman run --name portal-payments --hostname processed-at-vmware --detach --rm -p 8080:8080 --network skupper quay.io/redhatintegration/patient-portal-payment-processor-arm64:latest 
+
+podman run --name portal-payments --hostname processed-at-openshift-virt --detach --rm -p 8080:8080 --network skupper quay.io/redhatintegration/patient-portal-payment-processor-arm64:latest
 ----
+
+
+
 
 * Create a secure connection token on the *OpenShift cluster*. The router in the OpenShift Virtualization environment will use this token to establish a secure connection with the OpenShift cluster.
 +
@@ -256,7 +262,7 @@ cat secret_virt.token
 [.console-input]
 [source, bash,subs="+macros,+attributes"]
 ---- 
-vi secret_vmware.token
+vi secret_virt.token
 ----
 
 * Create the link by running the following command in *Hypervisor VM*
