--- a/documentation/modules/ROOT/pages/04-developer-resources.adoc
+++ b/documentation/modules/ROOT/pages/04-developer-resources.adoc
@@ -1,4 +1,4 @@
-= Solution Patterns: Minimize downtime when migrating your applications from hypervisor based environments to OpenShift Virtualization
+= Solution Patterns: Minimize Downtime when Migrating from Hypervisors to OpenShift Virtualization
 :sectnums:
 :sectlinks:
 :doctype: book
